kubernetes-networks/canary/canary-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: canary-http-svc
  namespace: canary-http
  labels:
    app: canary-http
spec:
  selector:
    app: canary-http
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
