kubernetes-networks/canary/prod-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: prod-http-svc
  namespace: prod-http
  labels:
    app: prod-http
spec:
  selector:
    app: prod-http
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
